--- a/src/style/about.css
+++ b/src/style/about.css
@@ -19,7 +19,7 @@ place-items:center;
 .about__me-image{
     border-radius:2rem;
     overflow: hidden;
-    transform: rotate(10deg);
+    /**transform: rotate(10deg);**/
     transition: var(--transition);
 }
 
@@ -31,6 +31,9 @@ place-items:center;
     display: grid;
     grid-template-columns: repeat(3,1fr);
     gap:1.5rem;
+    margin-top:24px;
+   
+   
 }
 .about__card{
     background:rgba(0, 0, 0, 0.3);
@@ -38,6 +41,10 @@ place-items:center;
     border-radius :2rem;
     padding:2rem;
     text-align:center;
+    
+}
+.about__content{
+    margin-top:2rem;
 }
 .about__card:hover{
     background:transparent;
