--- a/src/style/portfolio.css
+++ b/src/style/portfolio.css
@@ -2,6 +2,8 @@
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     gap:2.5rem;
+    margin:0 auto;
+    width: 100%;
     
 }
 
@@ -11,6 +13,8 @@
     border-radius:2rem;
     border:1px solid transparent;
     transition: var(--transition);
+    width:85%;
+    margin:0 auto;
  
 }
 .portfolio__item:hover{
