--- a/src/style/service.css
+++ b/src/style/service.css
@@ -1,7 +1,9 @@
 .service__container{
     display:grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(2, 1fr);
     gap:3rem;
+    width: 100vw;
+
 }
 .service {
     background-color: var(--color-bg-variant);
@@ -9,6 +11,8 @@
     border:1px solid var(--color-primary);
     height:fit-content;
     transition: var(--transition);
+    
+    margin:0 auto;
 }
 .service__head{
     background-color: var(--color-primary);
@@ -28,6 +32,7 @@
 .service__list li{
     display: flex;
     gap:1rem;
+    
     margin-bottom:0.8rem;
 }
 .service__list-icon{
@@ -52,7 +57,7 @@
      .service__container{
         grid-template-columns: 1fr;
         gap:1.5rem;
-        width: fit-content;
+    
         margin: auto;
      }    
         
